# smolbox

./: .gitignore  README.md  pyproject.toml
notebooks/: smolbox_logitlens.ipynb
smolbox/: config.py  main.py  smolbox.py
smolbox/core/: base_tool.py  commons.py  state_manager.py  tools.py
smolbox/experiments/: demo_attribution_experiment_gpt2.py
smolbox/notebooks/: smolbox_logitlens.ipynb
smolbox/tools/: basic_sampler.py  finetuner.py  hf_local_inference.py  hf_param_tweak_sampler.py  hf_to_onnx_converter.py  hf_zero_out_model.py  hf_zero_out_params.py  model_finetuner.py  model_reinitializer.py  onnx_converter.py  onnx_exporter.py  param_editor.py  param_tweak_sampler.py  sampler.py  token_bias_sampler.py  transformers_edit_param.py  transformers_inference.py  transformers_tweak_sampler.py  tweak_sampler.py  tweaking_sampler.py
smolbox/tools/infer/: mlx_sampler.py  sample.py  sampler.py  tweak.py  tweaker.py
smolbox/tools/inspect/: logitlens.py  mav.py  tensorlens_activations.py  tensorlens_attention.py  tensorlens_weights.py
smolbox/tools/io/: export.py  exporter.py  import.py
smolbox/tools/mutate/: edit.py  prune.py  quantize.py  reset.py
smolbox/tools/train/: finetune.py  finetuner.py
smolbox/tools/transform/: editor.py  pruner.py  quantizer.py  reinitializer.py
